<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical">
	<EditText 
		android:hint="@string/textEditHint"
		android:id="@+id/result"
		android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"/>
	<RadioGroup
		android:checkedButton="@+id/rbtnKg"
		android:orientation="horizontal"
		android:id="@+id/rbtngroupScale"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<RadioButton 
			android:text="@string/pound" 
			android:id="@+id/rbtnLbs" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
		<RadioButton 
			android:text="@string/kilogram" 
			android:id="@+id/rbtnKg" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
	</RadioGroup>
	<CheckBox
			android:text="@string/notRecord"
			android:id="@+id/chkNotRecord"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
	<LinearLayout 
		xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:orientation="horizontal">
		<Button 
			android:text="@string/connect" 
			android:id="@+id/btnConnect"
			android:layout_height="wrap_content"
			android:layout_width="0px"
			android:layout_weight="1"/>
		<Button 
			android:text="@string/disconnect" 
			android:id="@+id/btnDisconnect" 
			android:layout_width="0px"
			android:layout_weight="1" 
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<Button 
		android:text="@string/survey" 
		android:id="@+id/btnSurvey" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"/>	
	<TextView 
		android:text="@string/InfoTitle"
		android:id="@+id/txtInfoTitle"
		android:gravity="center_vertical|center_horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	<TextView 
		android:id="@+id/txtvInfo"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
</LinearLayout>
